--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,13 @@
-title: John Doe # your name (or website title) here
+title: Samiul Salehin # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   First description 
   <br><br>
   Second description 
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/samiul-salehin/">View My LinkedIn Profile</a> 
+  
+  <a href="https://github.com/Pritom-Mazhi">View My LinkedIn Profile</a>
   
 theme: jekyll-theme-minimal
-google_analytics: UA-000000-0 # your Google Analytics tracking ID here
+google_analytics: a108096833w161479285p162562534 # your Google Analytics tracking ID here
