--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,10 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   Second description 
   <br><br>
-
+  
+  <a href="https://www.linkedin.com/in/samiul-salehin/">View My LinkedIn Profile</a>
+  
+  <a href="https://github.com/Pritom-Mazhi">View My LinkedIn Profile</a>
   
 theme: jekyll-theme-minimal
 google_analytics: a108096833w161479285p162562534 # your Google Analytics tracking ID here
