--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,10 @@ logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   First description
   <br><br>
-  <a href="https://www.linkedin.com/in/samiul-salehin/">View My LinkedIn Profile</a>
- 
   Second description 
   <br><br>
-  <a href="https://github.com/Pritom-Mazhi">View My LinkedIn Profile</a>
+  <a href="https://github.com/Pritom-Mazhi">View My Github Profile</a>
+  <a href="https://www.linkedin.com/in/samiul-salehin/">View My LinkedIn Profile</a>
   
 theme: jekyll-theme-minimal
 google_analytics: a108096833w161479285p162562534 # your Google Analytics tracking ID here
